Fix scrollbars.

--- a/src/scss/__base.scss
+++ b/src/scss/__base.scss
@@ -1,3 +1,5 @@
+@use './color/_color';
+
 html {
   margin: 0;
   min-width: 100%;
@@ -35,3 +37,21 @@ footer {
   margin-top: 10px;
 }
 
+
+::-webkit-scrollbar {
+    width: 2px;
+    height: 2px;
+}
+ 
+::-webkit-scrollbar-track {
+    background-color: --color-scrollbar-track;
+}
+ 
+::-webkit-scrollbar-thumb {
+    background-color: var(--color-scrollbar-thumb);
+}
+
+* {
+    scrollbar-color: var(--color-scrollbar-thumb) var(--color-scrollbar-track);
+    scrollbar-width: thin; 
+}
